[package]
name = "always-assert"
version = "0.1.3"
description = "Recoverable assertions for long-running robust applications"
keywords = ["assert"]
categories = ["development-tools::debugging"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/always-assert"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"

exclude = [".github/", "bors.toml", "rustfmt.toml"]

[workspace]
members = ["xtask"]

[dependencies]
# Enable `log` feature to log assertion failures.
log = { version="0.4", optional=true }

[features]
# Escalate assertion failure to panic even if `debug_assertions` are not set.
force = []
